--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 <p align="center">¿Qué son los ecosistemas marinos?</p>
 <p align="justify"> Los ecosistemas marinos son sistemas acuáticos caracterizados por la presencia de agua salada como componente principal.  Incluyen una diversidad de hábitats, desde las zonas costeras hasta las profundidades oceánicas, y albergan una vasta gama de organismos, desde microorganismos hasta grandes mamíferos marinos. </p>
-<p align="center"><img src="C:\Users\Abdie\OneDrive\Documentos\dream weaver\Imagen2.jpg"></p>
+<p align="center"><img src="https://ichef.bbci.co.uk/ace/ws/800/cpsprodpb/7368/live/f81214e0-0f45-11f0-b234-07dc7691c360.jpg.webp" width="253" height="187" align="baseline" /></p>
 
 <b>Importancia de los ecosistemas marinos</b>
 	<ol>
